fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ img.nav-icon{
 	height: 150px;
 	border-radius: 20px;
 	background-color: white;
-	opacity: 0.8;
+	opacity: 1;
 	/*-webkit-filter: blur(30px);
 	  -moz-filter: blur(30px);
 	  -o-filter: blur(30px);
@@ -100,6 +100,7 @@ img.nav-icon{
 	  filter: blur(30px);*/
 	padding: 40px;
 	margin: 5px;
+
 }
 
 #tiretopright{
